--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@
   font-family: schnebel-sans-me, sans-serif;
   position: relative;
   padding-bottom: 10px;
+  font-weight: 600;
 }
 
 .header::after {
@@ -31,9 +32,6 @@
   left: 0;
   width: 150px;
   border-top: 2px solid;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .paragraph {
@@ -55,6 +53,8 @@
   top: 0;
   width: 100%;
   z-index: 1000;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .navbar::after {
@@ -67,7 +67,6 @@
 }
 
 .navbar__logo {
-  padding: 10px;
   width: 42px;
   height: 30px;
 }
@@ -92,12 +91,13 @@
 
 .greeting {
   position: relative;
-  min-height: calc(100vh - 55px);
+  min-height: calc(100vh - 46px);
   padding-top: 55px;
   background-image: url(images/mountains.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -100;
+  padding-top: 0;
 }
 
 .greeting::before {
@@ -138,12 +138,11 @@
 
 .greeting__header {
   margin: 0;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: 0.48em;
 }
 
 .greeting__name {
-  font-weight: 600;
   letter-spacing: 0.6em;
 }
 
@@ -153,7 +152,6 @@
 
 .introduction {
   min-height: 100vh;
-  height: 950px;
   position: relative;
   background-image: url(images/aboutMeBackground.png);
   background-repeat: no-repeat;
@@ -179,6 +177,7 @@
 
 .introduction__text {
   padding: 20px;
+  height: 100vh;
 }
 
 .introduction__header {
@@ -196,6 +195,10 @@
   width: auto;
   font-family: schnebel-sans-me, sans-serif;
   padding: 5px;
+}
+
+.introduction__image {
+  display: none;
 }
 
 .fields {
@@ -444,6 +447,9 @@
   width: 100%;
   padding: 10px 0;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__text {
