--- a/main.scss
+++ b/main.scss
@@ -25,6 +25,7 @@ $secondFont: 'Roboto', sans-serif;
     font-family: $firstFont;
     position: relative;
     padding-bottom: 10px;
+    font-weight: 600;
 
     &::after {
         content: "";
@@ -33,9 +34,6 @@ $secondFont: 'Roboto', sans-serif;
         left: 0;
         width: 150px;
         border-top: 2px solid;
-        -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
-        box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
     }
 
 }
@@ -49,9 +47,9 @@ $secondFont: 'Roboto', sans-serif;
 
 .navbar {
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        box-shadow: 0 0px 5px 0px rgba(0,0,0,0.35);
-    }
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0 0px 5px 0px rgba(0,0,0,0.35);
+}
 
 .navbar {
     background: white;
@@ -59,8 +57,8 @@ $secondFont: 'Roboto', sans-serif;
     top: 0;
     width: 100%;
     z-index: 1000;
-    // max-width: 100vw;
-    // overflow: hidden;
+    max-width: 100vw;
+    overflow: hidden;
     
         &::after {
             content: "";
@@ -72,10 +70,10 @@ $secondFont: 'Roboto', sans-serif;
         }        
     
     &__logo {
-        padding: 10px;
         width: 42px;
         height: 30px;
     }
+
     &__phonePopup {
         position: absolute;
         width: 134px;
@@ -97,15 +95,13 @@ $secondFont: 'Roboto', sans-serif;
 
 .greeting {
     position: relative;
-    min-height: calc(100vh - 55px);
+    min-height: calc(100vh - 46px);
     padding-top: 55px;
     background-image: url(images/mountains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -100;
-    // max-width: 100vw;
-    // overflow: hidden;
-    
+    z-index: -100;  
+    padding-top: 0;  
 
     &::before {
         content: "";
@@ -117,10 +113,6 @@ $secondFont: 'Roboto', sans-serif;
         background-repeat: no-repeat;
         background-size: 70%;
         background-position: center bottom;
-        // left: 0;
-        // right: 0;
-        // bottom: 0; 
-        // margin: 0 auto; 
         animation-name: logo-animation;
         animation-delay: 60s;
         animation-duration: 3s;
@@ -142,17 +134,16 @@ $secondFont: 'Roboto', sans-serif;
             }
         }
     }
-    
+
         &__text {
             padding: 40px 20px 40px 20px;
         }
         &__header {
             margin: 0;
-            font-weight: 400;
+            font-weight: 600;
             letter-spacing: 0.48em;
         }
         &__name {
-            font-weight: 600;
             letter-spacing: 0.6em;
         }
         &__paragraph {
@@ -162,14 +153,12 @@ $secondFont: 'Roboto', sans-serif;
 
 .introduction {
     min-height: 100vh;
-    height: 950px;
+    // height: 950px;
     position: relative;
     background-image: url(images/aboutMeBackground.png);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -100;
-    // max-width: 100vw;
-    // overflow: hidden;
     
     &::before {
         content: "";
@@ -189,6 +178,7 @@ $secondFont: 'Roboto', sans-serif;
 
     &__text {
         padding: 20px;
+        height: 100vh;
     }
     &__header {
         margin: 0;
@@ -204,13 +194,14 @@ $secondFont: 'Roboto', sans-serif;
         font-family: $firstFont;
         padding: 5px;
     } 
+    &__image {
+        display: none;
+    }
 }
 
 .fields {
     position: relative;    
     color: #f7f7f7;
-    // max-width: 100vw;
-    // overflow: hidden;
 
     &::after {
         content: "";
@@ -282,18 +273,13 @@ $secondFont: 'Roboto', sans-serif;
               transform: scale3d(1,1,1);
             }
           }
-    }    
-    // &__criminal::after {
-    //     display: none;
-    // }
+    } 
 }
 
 .strengths{
     background-image: url(images/strengthsBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    // max-width: 100vw;
-    // overflow: hidden;
 
     &__header {
         margin: 0;
@@ -371,8 +357,6 @@ $secondFont: 'Roboto', sans-serif;
 .contact {
     position: relative;
     color: #f7f7f7;
-    // max-width: 100vw;
-    // overflow: hidden;
 
     &::after {
         content: "";
@@ -439,6 +423,9 @@ $secondFont: 'Roboto', sans-serif;
             width: 100%;
             padding: 10px 0;
             position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         &__text {
             color: #7d7d7d;
