--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 1120px)  {
+
     /* NAVBAR */
-    .navbar {
+    /* .navbar {
         background: transparent;
     }
 
@@ -21,6 +22,10 @@
     }
     .navbar__phonePopup:hover {
         right: 0px;
+    } */
+
+    .navbar {
+        display: none !important;
     }
     
 
@@ -32,7 +37,7 @@
         bottom: 50%;
         margin-top: auto; 
         margin-bottom: auto;
-        padding-left: 60px;
+        left: -350px;
     }
 
     /* GREETING */
@@ -50,7 +55,6 @@
         width: 1000px;
         font-size: 1.1em;
         margin: 0 auto;
-        /* padding-left: 300px;*/
         padding-top: 200px; 
         position: relative;
         height: 100vh;
@@ -147,9 +151,9 @@
     /* INTRODUCTION */
     .introduction__text {
         padding-top: 85px;
-        /* padding-left: 300px; */
         width: 1000px;
         margin: 0 auto;
+        position: relative;
     }
 
     .introduction__header {
@@ -183,9 +187,6 @@
         width: 539px;
         height: 410px;
         background-repeat: no-repeat;
-        /* background-size: 50%;
-        opacity: 100%; */
-        /* background-position: right 0 bottom 0; */
         right: 50px;
         bottom: 250px;
         animation-name: logo-animation;
@@ -224,22 +225,19 @@
 
     .fields__header,
     .strengths__header {
-        /* padding-left: 300px; */
         padding-top: 85px;
         font-size: 2.2em;
     }
 
-    .fields__header::after,
-    .strengths__header::after {
-        /* left: 300px; */
+    .fields__container,
+    .strengths__container {
+        position: relative;
     }
 
     .fields__content,
     .strengths__content {
         display: flex;
         flex-wrap: wrap;
-        /* padding-left: 350px; */
-        /* padding-right: 50px; */
         padding-bottom: 0;
         min-height: calc(100vh - 250px);
         align-content: center;
@@ -299,6 +297,7 @@
         flex-direction: row;
         width: 1000px;
         margin: 0 auto;
+        position: relative;
     }
 
     .contact__container {
@@ -326,19 +325,16 @@
     }
 
     .contact__envelope {
-        /* width: 47px; */
         height: 45px;
         padding-right: 58px;
     }
 
     .contact__point {
-        /* width: 28px; */
         height: 42px;
         padding-right: 70px;
     }
 
     .contact__phone {
-        /* width: 38px; */
         height: 37px;
         padding-right: 62px;
     }
@@ -397,7 +393,7 @@
     /* GREETING */
     .greeting {
         padding-top: 0;
-        height: 100vh;
+        min-height: calc(100vh - 70.33px);
     }
 
     .greeting__text {
